--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,28 @@
 language: android
-jdk: oraclejdk8
-sudo: false
 
 android:
   components:
-    - platform-tools
     - tools
-    - build-tools-24.0.2
-    - android-22
-    - android-24
-    - sys-img-armeabi-v7a-android-22
+    - platform-tools
+    - build-tools-26.0.2
+    - android-26
+    - extra-android-support
     - extra-android-m2repository
+    - extra-google-m2repository
+    
+jdk:
+  - oraclejdk8
 
-before_script:
-  # Create and start emulator
-  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+branches:
+  except:
+    - gh-pages
+  
+notifications:
+  email: false
 
-script: ./gradlew connectedAndroidTest
+cache:
+  directories:
+    - $HOME/.gradle
+    
+script:
+  - chmod +x ./gradlew
