--- a/recorddialog/build.gradle
+++ b/recorddialog/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdkVersion 18
         targetSdkVersion 26
         versionCode 2
-        versionName "1.0.1"
+        versionName "1.0.2"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -23,10 +23,11 @@ android {
         }
     }
 
+    sourceSets { main { res.srcDirs = ['src/main/res', 'src/main/res/raw'] } }
 }
 group = "com.ivansotelo"
 archivesBaseName = "RecordDialog"
-version = "1.0.1"  //customize this for new release
+version = "1.0.2"  //customize this for new release
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
