--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,4 @@
 language: android
-
-android:
-  components:
-    - tools
-    - platform-tools
-    - build-tools-26.0.2
-    - android-26
-    - extra-android-support
-    - extra-android-m2repository
-    - extra-google-m2repository
     
 jdk:
   - oraclejdk8
@@ -16,13 +6,56 @@ jdk:
 branches:
   except:
     - gh-pages
-  
+
 notifications:
   email: false
 
+before_cache:
+ -rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+ -rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
 cache:
-  directories:
-    - $HOME/.gradle
-    
+ directories:
+ -$HOME/.gradle/caches/
+ -$HOME/.gradle/wrapper/
+
+env:
+ global:
+ - ANDROID_API=26
+ - EMULATOR_API=26
+ - ANDROID_BUILD_TOOLS=26.0.2
+ - ADB_INSTALL_TIMEOUT=5 # minutes
+
+android:
+ components:
+ - tools
+ - platform-tools
+ - build-tools-$ANDROID_BUILD_TOOLS
+ - android-$ANDROID_API
+ - android-$EMULATOR_API_LEVEL
+ - extra-google-m2repository
+ - extra-android-m2repository # for design library
+ - addon-google_apis-google-19 # google play services
+ - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
+ - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
+ licenses:
+ - android-sdk-preview-license-.+
+ - android-sdk-license-.+
+ - google-gdk-license-.+
+
+ before_install:
+- mkdir "$ANDROID_HOME/licenses" || true
+- echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" >
+"$ANDROID_HOME/licenses/android-sdk-license"
+- echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
+- chmod +x gradlew
+- ./gradlew dependencies || true
+
+before_script:
+- echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+- emulator -avd test -no-skin -no-audio -no-window &
+- android-wait-for-emulator
+- adb shell input keyevent 82 &
+
 script:
-  - chmod +x ./gradlew
+- "./gradlew clean build connectedCheck -PdisablePreDex --stacktrace"
